chore: fixed logo alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,6 +90,7 @@ img {
     padding: 15px;
     width: 135px;
     height: 130px;
+    align: center;
 }
 
 .banner {
